kubernetes/apps/monitoring/kube-prometheus-stack/app/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-prometheus-stack-grafana-local
  namespace: monitoring
spec:
  entryPoints: [web]
  routes:
    - match: Host(`grafana.${DOMAIN_LOCAL}`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-prometheus-stack-grafana-public
  namespace: monitoring
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`grafana.${DOMAIN_PUBLIC}`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls: {}
